<resources>
    <string name="app_name">Homework 2</string>
    <string name="movie_name">Avengers:\nEnd Game</string>
    <string name="movie_pg_rating">13+</string>
    <string name="movie_genres">Action, Adventure, Fantasy</string>
    <string name="movie_review_count">125 REWIEWS</string>
    <string name="storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="label_cast">Cast</string>
    <string name="actor_robert_ndowney_jr">Robert\nDowney Jr.</string>
    <string name="actor_chris_nevans">Chris\nEvans</string>
    <string name="actor_mark_nruffalo">Mark\nRuffalo</string>
    <string name="actor_chris_hemsworth">Chris\nHemsworth</string>
    <string name="label_storyline">Storyline</string>
    <string name="movie_details">Movie Details</string>
    <string name="movies_list">Movies List</string>
    <string name="error_movie_not_found">Movie not found</string>

    <string name="movies_list_allowed_age_template">%d+</string>
    <string name="movies_list_reviews_template">%d REVIEWS</string>
</resources>