<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMovieDetailsBackground"
        tools:context=".presentation.MainActivity">

        <ImageView
            android:id="@+id/ivBgImage"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_background" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_background_overlay" />

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_name"
            android:textColor="@color/colorMovieDetailsFilmName"
            android:textFontWeight="900"
            android:textSize="@dimen/movie_details_film_name_size"
            app:layout_constraintBottom_toBottomOf="@id/ivBgImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBgImage" />

        <TextView
            android:id="@+id/tvPG"
            style="@style/Text900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_age"
            android:padding="4dp"
            android:text="@string/movie_pg_rating"
            android:textColor="@color/colorMovieDetailsAllowedAgeText"
            android:textSize="@dimen/movie_details_allowed_age_size"
            app:layout_constraintBottom_toTopOf="@id/tvMovieName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvGenre"
            style="@style/Text300"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_genres"
            android:textColor="@color/colorMovieDetailsFilmGenre"
            android:textSize="@dimen/movie_details_film_genre_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMovieName" />

        <ImageView
            android:id="@+id/ivStarOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivStarFive"
            app:srcCompat="@drawable/ic_progress_foreground" />

        <ImageView
            android:id="@+id/ivStarTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/ivStarOne"
            app:layout_constraintTop_toTopOf="@id/ivStarFive"
            app:srcCompat="@drawable/ic_progress_foreground" />

        <ImageView
            android:id="@+id/ivStarThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/ivStarTwo"
            app:layout_constraintTop_toTopOf="@id/ivStarFive"
            app:srcCompat="@drawable/ic_progress_foreground" />

        <ImageView
            android:id="@+id/ivStarFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/ivStarThree"
            app:layout_constraintTop_toTopOf="@id/ivStarFive"
            app:srcCompat="@drawable/ic_progress_foreground" />

        <ImageView
            android:id="@+id/ivStarFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/tvReviewsCount"
            app:layout_constraintStart_toEndOf="@id/ivStarFour"
            app:layout_constraintTop_toTopOf="@id/tvReviewsCount"
            app:srcCompat="@drawable/ic_progress_background" />

        <TextView
            android:id="@+id/tvReviewsCount"
            style="@style/Text900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_review_count"
            android:textColor="@color/colorMovieDetailsBackText"
            android:textSize="@dimen/movie_details_reviews_size"
            app:layout_constraintStart_toEndOf="@id/ivStarFive"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        <TextView
            android:id="@+id/tvStorylineLabel"
            style="@style/Text900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_storyline"
            android:textColor="@color/colorMovieDetailsStorylineTitle"
            android:textSize="@dimen/movie_details_storyline_title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReviewsCount" />

        <TextView
            android:id="@+id/tvStoryline"
            style="@style/Text300"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline"
            android:textColor="@color/colorMovieDetailsStorylineText"
            android:textSize="@dimen/movie_details_storyline_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStorylineLabel" />

        <TextView
            android:id="@+id/tvCastLabel"
            style="@style/Text900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_cast"
            android:textColor="@color/colorMovieDetailsCastTitle"
            android:textSize="@dimen/movie_details_cast_title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStoryline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCastLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
